# CI-PIVOT

./: README.md  install_likwid.sh  install_stuff.sh  notes.txt
examples/CUDA/Example1/: Makefile  StreamTriad.cu
examples/CUDA/Example1/solutions/: Makefile  StreamTriad.cu  StreamTriad_v2.cu
examples/CUDA/Example2/: CMakeLists.txt  Makefile  matrix_multiply.cu
examples/CUDA/Example2/solution/: matrix_multiply.cu
examples/Kokkos/Example1/: CMakeLists.txt  build.sh  matmul.cpp
examples/MATAR/: kokkos-install.sh  matar-install.sh
examples/MATAR/Example1/: build.sh  build2.sh  matar_matmul.cpp
examples/MATAR/Example2/: build.sh  parmetis.cpp
examples/MATAR2/: CMakeLists.txt  install_matar.sh
examples/MPI/Example1/: CMakeLists.txt  MinWorkExampleMPI.c
examples/MPI/Example2/: CMakeLists.txt  SendRecv1.cpp
examples/MPI/Example2/solutions/: SendRecv2.cpp  SendRecv3.cpp  SendRecv4.cpp  SendRecv5.cpp
examples/MPI/Example3/: CMakeLists.txt  vector_matrix_mpi.cpp  vector_matrix_mpi_opt.cpp
examples/OMP_Offload/Example1/: CMakeLists.txt  stream_triad.cpp
examples/OpenMP/Example1/: CMakeLists.txt  HelloOpenMP.c
examples/OpenMP/Example1/solutions/: HelloOepnMP_opt1.c  HelloOepnMP_opt2.c  HelloOepnMP_opt3.c  HelloOepnMP_opt4.c  HelloOepnMP_opt5.c
examples/OpenMP/Example2/: CMakeLists.txt  vecadd.c
examples/OpenMP/Example2/solutions/: vecadd_opt1.c  vecadd_opt2.c  vecadd_opt3.c
examples/OpenMP/Example3/: CMakeLists.txt  HealthData.cpp
examples/OpenMP/Example3/solution/: HealthData_opt1.cpp
examples/autovec/: CMakeLists.txt  stream_triad.c  timer.c
examples/hm/Example1/: CMakeLists.txt  build.sh  matmul.cpp
examples/stdpar/triad/: Makefile  Makefile.openmp  triad.cc
